syntax = "proto3";

package moviedb_service;

option go_package = "github.com/kartik7120/booking_moviedb_service/cmd/grpcServer;moviedb";

enum Cast_And_Crew_Type {
    ACTOR = 0;
    DIRECTOR = 1;
    PRODUCER = 2;
    WRITER = 3;
    MUSIC_DIRECTOR = 4;
    CINEMATOGRAPHER = 5;
    EDITOR = 6;
    ART_DIRECTOR = 7;
    COSTUME_DESIGNER = 8;
    MAKEUP_ARTIST = 9;
    SOUND_DESIGNER = 10;
    VFX_ARTIST = 11;
    STUNT_PERFORMER = 12;
    CHOREOGRAPHER = 13;
    LYRICIST = 14;
    PLAYBACK_SINGER = 15;
    DUBBING_ARTIST = 16;
    PUBLICITY_DESIGNER = 17;
    PUBLIC_RELATIONS = 18;
    DISTRIBUTOR = 19;
    MARKETING = 20;
    LEGAL = 21;
    FINANCE = 22;
    PRODUCTION = 23;
    OTHER = 24;
}

message Cast_And_Crew {
    string name = 1;
    Cast_And_Crew_Type type = 2;
    string character_name = 3;
    string photourl = 4;
}

message Movie_Time_Slot {
    string startTime = 1;
    string endTime = 2;
    string duration = 3;
    string date = 4;
    SeatType movie_format = 5;
    // to be completed
}

message Movie {
    string name = 1;
    string description = 2;
    string director = 3;
    string producer = 4;
    string cast = 5;
    string genre = 6;
    string language = 7;
    string releaseDate = 8;
    string duration = 9;
    string rating = 10;
    string trailer = 11;
    string poster = 12;
}

enum VenueType {
    MOVIE = 0;
    CONCERT = 1;
    PLAY = 2;
    STANDUP = 3;
}

enum SeatType {
    2D = 0;
    3D = 1;
    4D = 2;
    Normal = 3;
    VIP = 4;
}

message SeatMatrix {
    string seat_number = 1;
    bool is_booked = 2;
    int32 price = 3;
    int32 row = 4;
    int32 column = 5;
    SeatType type = 6;
}


message Venue {
    string name = 1;
    string address = 2;
    VenueType type = 3;
    string description = 4;
    int32 row = 5;
    int32 column = 6;
    float longitude = 7;
    float latitude = 8;
    int32 screen_number = 9;
}

message MovieList {
    repeated Movie movies = 1;
}

message MovieRequest {
    string name = 1;
}

message MovieResponse {
    int32 status = 1;
    string message = 2;
    Movie movie = 3;
    string error = 4;
}

message MovieListResponse {
    int32 status = 1;
    string message = 2;
    MovieList movieList = 3;
    string error = 4;
}

service MovieDBService {
    rpc AddMovie (Movie) returns (MovieResponse);
    rpc GetMovie (MovieRequest) returns (MovieResponse);
    rpc GetAllMovies (google.protobuf.Empty) returns (MovieListResponse);
    rpc UpdateMovie (Movie) returns (MovieResponse);
    rpc DeleteMovie (MovieRequest) returns (MovieResponse);
}
